--- a/src/app/ui/Header/Header.css
+++ b/src/app/ui/Header/Header.css
@@ -64,7 +64,7 @@ a:visited {
   display: none;
 }
 
-@media (min-width: 800px) and (max-width: 1290px) {
+@media (max-width: 1290px) {
   .header__navigation {
     padding-right: 30px;
     height: 50px;
@@ -73,11 +73,11 @@ a:visited {
   }
 }
 
-@media (min-width: 320px) and (max-width: 800px) {
+@media (max-width: 780px) {
   .header__navigation {
     padding-right: 25px;
     height: 45px;
-    font-size: 18px;
+    font-size: 20px;
     gap: 16px;
   }
 
@@ -89,7 +89,7 @@ a:visited {
   }
 }
 
-@media (min-width: 320px) and (max-width: 600px) {
+@media (max-width: 600px) {
   .header {
     height: 65px;
   }
