--- a/src/app/ui/Shop/Shop.css
+++ b/src/app/ui/Shop/Shop.css
@@ -3,10 +3,10 @@
 }
 
 .shop__gallery {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px 2%;
-  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 15px;
+  padding: 15px 0 15px;
 }
 
 .shop__buttons {
@@ -39,21 +39,16 @@
 }
 
 @media (max-width: 1020px) {
-  .shop__gallery {
-    gap: 0 1.5%;
-  }
-
   .shop__button {
     font-size: 2.2vw;
   }
 }
 
-@media (max-width: 710px) {
+@media (max-width: 825px) {
   .shop__gallery {
-    gap: 0 1.5%;
-    padding: 0 1%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
     margin-top: 0;
-    justify-content: space-around;
   }
 
   .shop__buttons {
@@ -76,5 +71,19 @@
   .shop__gallery-homepage > :nth-child(7),
   .shop__gallery-homepage > :nth-child(8) {
     display: none;
+  }
+}
+
+@media (max-width: 710px) {
+  .shop__gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 400px) {
+  .shop__gallery {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 }
