--- a/src/app/ui/ShopBanner/TitleBanner.css
+++ b/src/app/ui/ShopBanner/TitleBanner.css
@@ -19,7 +19,7 @@
 
 @media (max-width: 1290px) {
   .title-banner {
-    margin: 0 0 15px;
+    margin: 0;
     padding: 15px;
   }
 
@@ -37,7 +37,7 @@
 @media (max-width: 600px) {
   .title-banner {
     text-align: center;
-    padding: 10px;
+    padding: 20px 10px;
     letter-spacing: 2px;
   }
 
