--- a/src/app/admin-login/page.css
+++ b/src/app/admin-login/page.css
@@ -1,22 +1,14 @@
 .login-page__main {
   display: flex;
-  height: 69vh;
-}
-
-.login-page__login {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  background-image: url("/contact-background.png");
-  background-position: center;
-  background-size: cover;
   justify-content: center;
+  height: 100%;
 }
 
 .login-page__login-form {
   width: 60vw;
   max-width: 750px;
-  align-self: center;
+  padding-top: 100px;
+  box-sizing: border-box;
 }
 
 .login-page__title {
@@ -90,7 +82,6 @@
 
   .login-page__login-form {
     width: 70vw;
-    margin-top: 60px;
   }
 
   .form__wrapper {
@@ -131,8 +122,13 @@
 }
 
 @media (max-width: 520px) {
+  .login-page__main {
+    padding: 15px;
+  }
+
   .login-page__login-form {
-    width: 80vw;
+    width: 100%;
+    padding: 0;
   }
 
   .form__wrapper {
