--- a/src/app/components/Shop/SearchBar/SearchBar.css
+++ b/src/app/components/Shop/SearchBar/SearchBar.css
@@ -5,7 +5,7 @@ input[type="checkbox" i] {
 .search-bar {
   display: flex;
   width: 100%;
-  padding: 10px 20px;
+  padding: 15px 20px;
   background-color: #171410;
   color: white;
   font-size: 20px;
@@ -17,7 +17,6 @@ input[type="checkbox" i] {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 2px;
   width: 100%;
   min-height: 35px;
 }
@@ -29,6 +28,10 @@ input[type="checkbox" i] {
   align-items: center;
   width: 100%;
   min-width: 80vw;
+}
+
+.main-options__extra-padding {
+  padding-bottom: 10px;
 }
 
 .search-bar__input,
