add border radius to elements, update email functions, add text-shadow

--- a/src/app/(root)/HeroSecton/HeroSection.css
+++ b/src/app/(root)/HeroSecton/HeroSection.css
@@ -27,6 +27,7 @@
   max-height: 550px;
   justify-content: center;
   background-color: rgb(14, 9, 0);
+  filter: contrast(0.94);
 }
 
 .banner__textbox_text {
