--- a/src/app/components/Shop/SearchBar/SearchBar.css
+++ b/src/app/components/Shop/SearchBar/SearchBar.css
@@ -42,6 +42,7 @@ input[type="checkbox" i] {
   border: none;
   border-radius: 5px;
   font-size: 16px;
+  text-transform: capitalize;
 }
 
 .search-bar__search-field {
