--- a/src/app/contact/ContactForm/ContactForm.css
+++ b/src/app/contact/ContactForm/ContactForm.css
@@ -65,6 +65,7 @@ select:invalid {
   padding: 4px;
   box-sizing: border-box;
   border: black 1px solid;
+  border-radius: 4px;
 }
 
 .contact-form__input_email {
@@ -95,6 +96,7 @@ select:invalid {
   font-size: 20px;
   border: black 1px solid;
   box-sizing: border-box;
+  border-radius: 4px;
 }
 
 .contact-form__submit-message {
