--- a/src/app/(root)/HeroSecton/HeroSection.css
+++ b/src/app/(root)/HeroSecton/HeroSection.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  color: white;
+  color: gainsboro;
   background-image: url("/homepage/banner-text-background.png");
   background-position: center;
   background-size: cover;
@@ -31,12 +31,13 @@
 }
 
 .banner__textbox_text {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 400;
   line-height: 2.2rem;
   margin: 25px 8%;
   text-align: center;
-  max-width: 350px;
+  max-width: 322px;
+  font-style: italic;
 }
 
 .banner__logo {
@@ -59,7 +60,7 @@
   }
 
   .banner__textbox_text {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.8rem;
     margin: 10px 8%;
     max-width: 270px;
@@ -78,7 +79,7 @@
   }
 
   .banner__textbox_text {
-    font-size: 1.5vw;
+    font-size: 1.6vw;
     line-height: 1.5rem;
     margin: 8px 8%;
   }
@@ -131,7 +132,7 @@
   }
 
   .banner__textbox_text {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 2.2rem;
     max-width: 450px;
   }
