--- a/src/app/components/ShopBanner/TitleBanner.css
+++ b/src/app/components/ShopBanner/TitleBanner.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #efe4d3;
+  color: gainsboro;
   border-radius: 8px;
   width: 100%;
   box-sizing: border-box;
