--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   height: auto;
   padding: 20px 30px 38px;
-  color: white;
+  color: gainsboro;
   font-size: 18px;
   line-height: 1.4rem;
   position: relative;
@@ -23,8 +23,9 @@
 
 .footer__logo {
   position: absolute;
-  top: 10px;
-  left: 44%;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   height: auto;
   width: 24vw;
   max-width: 250px;
@@ -37,7 +38,7 @@
 }
 
 .footer__link:visited {
-  color: white;
+  color: gainsboro;
 }
 
 .footer__link:hover {
@@ -54,7 +55,6 @@
 
   .footer__logo {
     top: 15px;
-    left: 40%;
     max-width: 200px;
   }
 }
@@ -66,7 +66,6 @@
   }
 
   .footer__logo {
-    left: 38%;
     top: 10px;
   }
 
