--- a/src/app/components/Shop/GalleryCard/GalleryCard.css
+++ b/src/app/components/Shop/GalleryCard/GalleryCard.css
@@ -65,6 +65,10 @@
   margin: 5px 0;
 }
 
+.gallery-card__price_hidden {
+  visibility: none;
+}
+
 .gallery-card__button {
   width: 85px;
   height: 27px;
