--- a/src/app/(root)/ImageCard/ImageCard.css
+++ b/src/app/(root)/ImageCard/ImageCard.css
@@ -31,11 +31,10 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  height: 40px;
+  height: auto;
   width: 100%;
   text-align: center;
   font-size: 24px;
-  line-height: 2.4rem;
   box-sizing: border-box;
   padding-top: 2px;
 }
