--- a/src/app/(root)/HeroSecton/HeroSection.css
+++ b/src/app/(root)/HeroSecton/HeroSection.css
@@ -30,7 +30,7 @@
   filter: contrast(0.94);
 }
 
-.banner__textbox_text {
+.banner__textbox-text {
   font-size: 20px;
   font-weight: 400;
   line-height: 2.2rem;
@@ -58,7 +58,7 @@
     min-height: 475px;
   }
 
-  .banner__textbox_text {
+  .banner__textbox-text {
     font-size: 18px;
     line-height: 1.8rem;
     margin: 10px 8%;
@@ -77,7 +77,7 @@
     min-height: 0;
   }
 
-  .banner__textbox_text {
+  .banner__textbox-text {
     font-size: 1.5vw;
     line-height: 1.5rem;
     margin: 8px 8%;
@@ -104,7 +104,7 @@
     justify-content: flex-start;
   }
 
-  .banner__textbox_text {
+  .banner__textbox-text {
     line-height: 1.2rem;
     margin: 10px 9% 2vw;
   }
@@ -130,7 +130,7 @@
     padding: 30px 0 15px;
   }
 
-  .banner__textbox_text {
+  .banner__textbox-text {
     font-size: 18px;
     line-height: 2.2rem;
     max-width: 450px;
