--- a/src/app/(root)/HeroSecton/HeroSection.css
+++ b/src/app/(root)/HeroSecton/HeroSection.css
@@ -8,12 +8,13 @@
   position: relative;
   width: 100%;
   height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 .banner__image {
   width: 100%;
   height: auto;
-  display: block;
 }
 
 .banner__textbox {
@@ -30,16 +31,16 @@
   align-items: center;
   overflow: hidden;
   height: 100%;
-  justify-content: center;
+  justify-content: space-evenly;
   background-color: rgb(14, 9, 0);
   filter: contrast(0.94);
 }
 
 .banner__textbox-text {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 400;
-  line-height: 2rem;
-  margin: 25px 8%;
+  line-height: 1.8rem;
+  padding: 3% 8% 5%;
   text-align: center;
   max-width: 300px;
   font-style: italic;
@@ -54,32 +55,20 @@
 
 .banner__button {
   margin: 0 0 20px;
-  width: 180px;
-  height: 40px;
+  width: 170px;
+  height: 39px;
   color: white;
   font-size: 20px;
 }
 
-@media (max-width: 1290px) {
-  .banner__textbox-text {
-    font-size: 20px;
-    line-height: 1.8rem;
-    margin: 10px 8%;
-    max-width: 270px;
-  }
-
-  .banner__button {
-    width: 165px;
-    height: 35px;
-    font-size: 18px;
-  }
+.wood-accent_top {
+  display: none;
 }
 
-@media (max-width: 1160px) {
+@media (max-width: 1180px) {
   .banner__textbox-text {
     font-size: 1.6vw;
     line-height: 1.5rem;
-    margin: 8px 8%;
   }
 
   .banner__logo {
@@ -88,7 +77,7 @@
 
   .banner__button {
     width: 150px;
-    margin: 10px 0 20px;
+    height: 36px;
     font-size: 16px;
   }
 }
@@ -99,23 +88,23 @@
     left: 0;
     width: 32%;
     box-shadow: black 5px 2px 5px;
-    justify-content: flex-start;
   }
 
   .banner__textbox-text {
-    margin: 10px 6%;
+    font-size: 1.5vw;
+    line-height: 1.3rem;
+    padding: 3% 7% 4%;
   }
 
   .banner__logo {
-    width: 70%;
-    padding-top: 30px;
+    width: 75%;
+    padding-top: 24px;
   }
 
   .banner__button {
-    font-size: 15px;
-    height: 32px;
-    width: 150px;
-    margin: 0;
+    font-size: 14px;
+    height: 30px;
+    width: 130px;
   }
 }
 
@@ -129,33 +118,52 @@
   .banner__textbox-text {
     font-size: 20px;
     line-height: 2.2rem;
-    max-width: 450px;
+    max-width: 400px;
+    padding: 0 7%;
   }
 
   .banner__logo {
     padding: 30px 0 20px;
-    width: 350px;
+    width: 400px;
   }
 
   .banner__button {
     margin: 30px 0 20px;
     width: 180px;
     height: 40px;
+    font-size: 18px;
   }
 
-  @media (max-width: 650px) {
-    .banner__image {
-      display: none;
-    }
+  .wood-accent_top {
+    display: block;
+  }
 
-    .banner__logo {
-      padding: 20px 0;
-      width: 70%;
-      min-width: 230px;
-    }
+  .wood-accent_bottom {
+    display: none;
+  }
+}
 
-    .banner__textbox {
-      padding: 50px 0;
-    }
+@media (max-width: 650px) {
+  .banner__image {
+    display: none;
+  }
+
+  .banner__logo {
+    padding: 20px 0;
+    width: 70%;
+    min-width: 230px;
+  }
+
+  .banner__textbox {
+    padding: 20px 0;
+  }
+
+  .banner__textbox-text {
+    font-size: 18px;
+    line-height: 1.8rem;
+  }
+
+  .wood-accent_top {
+    display: none;
   }
 }
