--- a/src/app/(root)/TextBox/TextBox.css
+++ b/src/app/(root)/TextBox/TextBox.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   background-color: #f2eee2;
-  margin: 5px 0 20px;
+  margin-bottom: 20px;
   color: black;
   height: fit-content;
   padding: 8px 4px;
@@ -49,7 +49,7 @@
 
 @media (max-width: 1290px) {
   .text-box {
-    margin-top: 10px;
+    margin-top: 0;
   }
 
   .text-box__section {
