--- a/src/app/components/Shop/ItemModal/ItemModal.css
+++ b/src/app/components/Shop/ItemModal/ItemModal.css
@@ -20,13 +20,8 @@
 
 .modal__close-button {
   position: absolute;
-  top: 15px;
+  top: 10px;
   right: 15px;
-  height: 20px;
-  width: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url("/shared/close-button.svg");
   border: none;
   cursor: pointer;
   padding: 0;
@@ -40,7 +35,7 @@
 
 .item-modal__container {
   width: 70vw;
-  height: 46vw;
+  height: fit-content;
   max-height: 900px;
   max-width: 1200px;
   display: flex;
@@ -48,8 +43,8 @@
   border: solid #171717 5px;
   align-self: center;
   justify-content: space-between;
-  padding: 15px;
   position: relative;
+  padding: 10px;
 }
 
 .item-modal__image-container {
@@ -97,10 +92,10 @@
   width: 48%;
   display: flex;
   flex-direction: column;
-  padding: 10px 0 0 15px;
   text-align: left;
   box-sizing: border-box;
   font-size: 20px;
+  padding: 10px 0 0 20px;
 }
 
 .item-modal__info-container-info {
@@ -116,21 +111,21 @@
 }
 
 .item-modal__price {
-  font-size: 24px;
+  font-size: 22px;
   margin-bottom: 20px;
 }
 
 .item-modal__description {
-  font-size: 26px;
   line-height: 1.2rem;
-  margin-bottom: 5px;
+  font-size: 22px;
+  margin-bottom: 6px;
 }
 
 .item-modal__description-text {
-  font-size: 20px;
-  line-height: 1.8rem;
   padding-bottom: 10px;
   padding-right: 10px;
+  font-size: 18px;
+  line-height: 1.5rem;
 }
 
 .item-modal__wood-types {
@@ -139,8 +134,9 @@
 }
 
 .wood-types__title {
-  margin: 0;
-  font-size: 20px;
+  margin: 0 0 2;
+  font-size: 28px;
+  line-height: 2rem;
 }
 
 .wood-types__description {
@@ -149,14 +145,14 @@
 
 .item-modal__purchase-section {
   display: flex;
-  gap: 20px;
   align-items: center;
   font-size: 24px;
-  padding: 15px 10px 10px 0;
+  gap: 15px;
+  padding: 12px 0 7px;
 }
 
 .item-modal__stock {
-  font-size: 26px;
+  font-size: 22px;
 }
 
 .item-modal__out-of-stock {
@@ -164,8 +160,8 @@
 }
 
 .out-of-stock__description {
-  font-size: 20px;
-  padding: 0 0 5px;
+  font-size: 18px;
+  padding: 0 0 2px 5px;
 }
 
 .item-modal__button-wrapper {
@@ -174,10 +170,12 @@
 
 .item-modal__button {
   width: 100%;
-  height: 45px;
+  height: 40px;
   background-color: #414141;
   font-size: 20px;
   line-height: 1.2rem;
+  flex: 1;
+  max-width: 250px;
 }
 
 .item-modal__button:hover {
@@ -224,56 +222,6 @@
 .selected-thumbnail {
   border: 1px solid #0b3916;
   box-shadow: 0 0 8px #0b3916;
-}
-
-@media (max-width: 1400px) {
-  .item-modal__container {
-    height: 52vw;
-    padding: 10px;
-  }
-
-  .item-modal__info-container {
-    padding: 10px 0 0 20px;
-  }
-
-  .item-modal__title {
-    font-size: 28px;
-    line-height: 2rem;
-    margin-bottom: 2px;
-  }
-
-  .item-modal__price {
-    font-size: 22px;
-  }
-
-  .item-modal__description {
-    font-size: 22px;
-    margin-bottom: 6px;
-  }
-
-  .item-modal__description-text {
-    font-size: 18px;
-    line-height: 1.5rem;
-  }
-
-  .item-modal__purchase-section {
-    display: flex;
-    gap: 15px;
-    padding: 12px 0 7px;
-  }
-
-  .item-modal__stock {
-    font-size: 22px;
-  }
-
-  .out-of-stock__description {
-    font-size: 18px;
-    padding: 0 0 2px 5px;
-  }
-
-  .item-modal__button {
-    height: 40px;
-  }
 }
 
 @media (max-width: 1200px) {
@@ -345,7 +293,7 @@
 
   .item-modal__info-container {
     width: 52%;
-    padding: 5px 0 0 5px;
+    padding: 5px 0 0 10px;
     justify-content: space-between;
   }
 
